#==============================================================
#
#  Name: RELEASE_NOTES
#
#  Rem:  This files describes release notes for 
#        the FastFeedback IOC Application.        
#
#  Auth: 19-May-2015, L. Piccoli         (lpiccoli)
#        18-Nov-2015, A. Babbitt         (ababbitt)
#      
#==============================================================
#
FastFeedback-R1-0-17 22-Aug-2017  Jeremy Mock (JMOCK)
  Fix vioc-sys0-lgo1/st-on.cmd broken link in PHASE_LNK

FastFeedback-R1-0-16 19-Jul-2017  Jeremy Mock (JMOCK)
  Fix vioc-sys0-lg01/st.cmd invocation of 3 state functions:
      Passing the the wrong macros causing the sequences to run incorrectly
  Fix common/st.cmd to include a macro "LOCA_NAME" which was needed to run
      LoopConfiguration.cc correctly - causing seg faults in vioc-und1-tr02
  Change to seq version R2.2.4-1.0 which dumps any issues while running

FastFeedback-R1-0-15 22-May-2017  Jeremy Mock (JMOCK)
  Add vioc-bsy0-tr02 to accomodate reconfiguration of BSY

FastFeedback-R1-0-14:
   Updated st.cmd to take into account EVR-related, unique PV names
   Updated st-on.cmd and st-off.cmd for same reason
   Modified fbck_template.substitutions to remove LG PVs from common file
      Place generation of those PVs in vioc-sys0-lg01 startup script
   Added support for viocs to ntwk_bsy0_main.edl screen
FastFeedback-R1-0-13:

   ---Future Planning -----------------------------------------
   * <Indicates planfbck_template.substitutionsned for this release, but still being actively worked on>
   Moved FCOM parameter configuration out of common/st.cmd into kernel-modules.cmd (epics application should be environment agnostic)
   Revert back to original PV Names for feedback loops (keep new vioc names)
   Updated EVR-related PV names to make them unique based on vioc (to avoid PV duplication)
   Remove display/ directory and all edm displays with new names (revert to old names and keep current displays) 
   Switching scripts here 