@@ -401,9 +401,7 @@ int TrajectoryFit::updateActuators(Vector& actuatorDelta) throw (Exception) {
     // Fill in the current time and pulseId
     epicsTimeStamp timestamp;
     epicsTimeGetCurrent(&timestamp);
-#ifdef RTEMS
     evrTimePutPulseID(&timestamp, _loopConfiguration->_pulseIdPv.getValue());
-#endif
 
     for (ActuatorSet::iterator it = _actuators->begin();
             it != _actuators->end(); ++it, ++i) {
@@ -445,9 +443,7 @@ int TrajectoryFit::updateStates(Vector &states) throw (Exception) {
     // Fill in the current time and pulseId
     epicsTimeStamp timestamp;
     epicsTimeGetCurrent(&timestamp);
-#ifdef RTEMS
     evrTimePutPulseID(&timestamp, _loopConfiguration->_pulseIdPv.getValue());
-#endif
 
     Vector::iterator stateIt = states.begin();
     for (StateSet::iterator it = _states->begin();
